tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/purityEffectsNeg.check
newSource:4: error: effect type mismatch;
 found   : (RefSet(Set()),Assigns(Map()),RefSet(Set(ThisRef(class C))))
 required: (RefSet(Set()),Assigns(Map()),RefSet(Set()))
  def f1: C @loc() = this
                     ^
newSource:5: error: effect type mismatch;
 found   : (RefSet(Set()),Assigns(Map()),AnyLoc)
 required: (RefSet(Set()),Assigns(Map()),RefSet(Set()))
  def f2: Int @loc() = 1
                       ^
newSource:6: error: effect type mismatch;
 found   : (RefSet(Set()),Assigns(Map()),AnyLoc)
 required: (RefSet(Set()),Assigns(Map()),RefSet(Set()))
  def f3: String @loc() = "hai"
                          ^
